fix css to align right

--- a/src/components/logTable/logTable.css
+++ b/src/components/logTable/logTable.css
@@ -1,10 +1,9 @@
 .LogTable {
     z-index: 1;
     position: absolute;
-    top: 600px;
-    left: 20px;
-    width: 300px;
-    height: 300px;
+    top: 75px;
+    width:200px;
+    right: 20px;
     display: flex;
     flex-direction: column;
 }
